--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div class="logo"></div>
-    <div id="main">Loading</div>
+    <div id="root">
+      <div class="logo"></div>
+      <div id="main">
+        <div class="loader-wrapper">
+          <div class="loader"></div>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
